--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ html {
 
 .calculator{
   background: linear-gradient(to bottom, #d8e0de 0%,#aebfbc 22%,#99afab 33%,#8ea6a2 50%,#829d98 67%,#4e5c5a 82%,#0e0e0e 100%);
-  width: 31%;
+  width: 25rem;
   margin: 2rem auto;
   padding: 1rem;
   border-radius: 20px 40px 5px 25px;
